Made the ObjectSharer:slave consistent with the server (takes a literal object specifying what to share, rather than several arguments)

--- a/server/apps/Browser/content/controller.html
+++ b/server/apps/Browser/content/controller.html
@@ -76,7 +76,10 @@
 			resizeBy: function(dW, dH) {},
 
 		})
-		.shareState('own', ['setURL', 'panBy', 'zoomBy', 'resizeBy'])
+		.shareState({
+			fields: 'own', 
+			notify: ['setURL', 'panBy', 'zoomBy', 'resizeBy'],
+		})
 	;
 
 	log.spyMethods(Browser);
