--- a/server/content/controller.html
+++ b/server/content/controller.html
@@ -175,9 +175,9 @@
 			// Configure the sharer to manage app state.
 			// This must be called before the app is created, 
 			// typically when creating the class (after defining the fields and methods to be shared).
-			shareState: function(sharedFields, sharedMethods) {
+			shareState: function(spec) {
 				log.enter(this, 'shareState');
-				this.sharer = ObjectSharer.create().name(this.className()+'ObjectSharer').slave(this, sharedFields || 'own', sharedMethods);
+				this.sharer = ObjectSharer.create().name(this.className()+'ObjectSharer').slave(this, spec);
 				log.exit(this, 'shareState');
 				return this;
 			},
