--- a/renderer/content/renderer.html
+++ b/renderer/content/renderer.html
@@ -134,10 +134,6 @@ p { margin: 5px; padding: 0;}
 	}
 
 	$(document).ready(function() {
-		//var gui = require('nw.gui');
-		//var w = gui.Window.get();
-		//w.showDevTools();
-
 		// Collapse/Expand log by clicking
 		$('#log').on("click", ".Indent", function(e) {
 			$(this).toggleClass('closed');
@@ -147,7 +143,7 @@ p { margin: 5px; padding: 0;}
 			e.stopPropagation();
 		});
 
-		global.renderer = process.mainModule.exports.init();
+		process.mainModule.exports.init(nw.Window.get());
 	});
 </script>
 </head>
