--- a/server/apps/Map/content/serverMap.html
+++ b/server/apps/Map/content/serverMap.html
@@ -72,26 +72,24 @@
 
     </style>
 
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.9.0/css/ol.css" type="text/css">
-    <script src="http://openlayers.org/en/v3.9.0/build/ol.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
+    <!-- We need the debug version otherwise ol.ViewHint and mainView.getHints() are undefined!! -->
+    <script src="http://openlayers.org/en/v4.1.0/build/ol-debug.js" type="text/javascript"></script>
 
 </head>
 <body>
-<div id="map">
-</div>
+<p id="address"></p>
+<div id="map"></div>
 <div id="topbar">
-<div class="menu" onclick="alert('not implemented...')">Open Map</div><input style="display:none;" id="fileDialog" type="file" accept=".json"/>
-<div class="menu" onclick="alert('not implemented...')">Change Layer</div>
-<div class="menu" onclick="alert('not implemented...')">Gallery</div>
+    <div class="menu" onclick="alert('not implemented...')">Maps</div>
+    <div class="menu" onclick="alert('not implemented...')">Lenses</div>
+    <input id="search" type="text" style="width: 40%"/><div class="menu" onclick="searchLocation()">Search</div>
 </div>
 
 <div id="help">
-<div class="close" onclick="$('#help').css('display', 'none')">&#x2716;</div>
-<div>Show slide: click thumbnail</div>
-<div>Next slide: <button onclick="app.nextSlide()">&rarr;</button> or <button onclick="app.nextSlide()">space</button></div>
-<div>Previous slide: <button onclick="app.prevSlide()">&larr;</button></div>
-<div>Gallery: <button onclick="$('.slide.current').click()">&#x21a9;</button> or click selected slide or "Gallery" menu</div>
-<div>Load slideshow: use menu or drag file/folder to window</div>
+    <div class="close" onclick="$('#help').css('display', 'none')">&#x2716;</div>
+    <div>Drag: pan map</div>
+    <div>Mousewheel: zoom map</div>
 </div>
 
 <div id="errorPanel">
@@ -119,7 +117,7 @@
                 return false;
 
             case 39: // Right
-            case 32: // Space
+//            case 32: // Space
                 event.stopImmediatePropagation();
                 return false;
 
@@ -146,14 +144,52 @@
     }
     $('#closeError').click(hideErrors);
 
-    // Load the slide deck in the browser
-    var mainView, mainMap;
+    // Map state
+    var mainView, mainMap, scale = 1;
+
+    // Whether we are currently interacting with the map.
+    // During interaction, incoming changes to the map state are ignored
+    // to avoid an infinite notification loop.
+    function interacting() {
+        // *** we're supposed to use this.mainView.isAnimating(), 
+        // *** but there is no this.mainView.isInteracting()...
+        // *** The code below requires ol-debug.js to be loaded instead of ol.js
+        var hints = this.mainView.getHints();
+        return hints[ol.ViewHint.INTERACTING] > 0 
+            || hints[ol.ViewHint.ANIMATING] > 0;
+    }
+
+    // Update map view when app state changes
+    app.wrapFields({
+        set center(c)       { this._set(c); panned(); },
+        set resolution(r)   { this._set(r); zoomed(); },
+        set mapCenter(c)    { this._set(c); panned(); },
+        set rotation(r)     { this._set(r); rotated();},
+    });
+
+    function panned() {
+        if (mainView && !interacting())
+            mainView.setCenter([app.center[0], app.center[1]]); 
+            // can't use setCenter(app.center) because this.center is not a real array...
+    }
+
+    function zoomed() {
+        if (mainView && !interacting())
+            mainView.setResolution(app.resolution);
+    }
+
+    function rotated() {
+        if (mainView && !interacting())
+            mainView.setRotation(app.rotation);
+    }
+
+    // Load map
     function loadMap() {
-        var mainView = new ol.View({
+        mainView = new ol.View({
             center: ol.proj.transform(app.center, 'EPSG:4326', 'EPSG:3857'),
-            zoom: app.zoom
+            resolution: 40075016.68557849 / $('#map').width(),
           });
-        var mainMap = new ol.Map({
+        mainMap = new ol.Map({
           target: 'map',
           layers: [
             new ol.layer.Tile({
@@ -161,14 +197,66 @@
             })
           ],
           view: mainView,
+          // *** Disable rotate interactions
+          interactions: ol.interaction.defaults({altShiftDragRotate:false, pinchRotate:false}),
         });
 
-        mainView.on('change:center', function(evt) { app.center = mainView.getCenter(); });
-        mainView.on('change:resolution', function(evt) { app.zoom = mainView.getZoom(); });
+        // Compute the scale between our resolution and that of the wall
+        scale = app.resolution / mainView.getResolution();
+
+        // Update map state when interacting
+        mainView.on('change:center', function(evt) { 
+            if (interacting())
+                app.center = mainView.getCenter(); 
+        });
+        mainView.on('change:resolution', function(evt) { 
+            if (interacting())
+                app.resolution = mainView.getResolution() * scale; 
+        });
+        // *** Ignore rotations because they do not work yet on the tiled display
+        // mainView.on('change:rotation', function(evt) { 
+        //     if (interacting())
+        //         app.rotation = mainView.getRotation(); 
+        // });
     }
+
+    // Search
+    var geocoder = null;
+    function initGMap() {
+        geocoder = new google.maps.Geocoder();
+    }
+    $('#search').on('keydown', function(event) {
+            switch (event.which || event.keyCode) {
+            case 13: // Return
+                searchLocation();
+                event.stopImmediatePropagation();
+                return false;
+            }
+    });
+
+    function searchLocation() {
+        var address = document.getElementById("search").value;
+        geocoder.geocode( { 'address': address}, function(results, status) {
+            if (status == google.maps.GeocoderStatus.OK) {
+                var latlng = results[0].geometry.location;
+                var center = ol.proj.transform([latlng.lng(), latlng.lat()], 'EPSG:4326', 'EPSG:3857');
+                mainView.setCenter(center);
+                mainView.setZoom(10);   // *** FIXME - use map.fit to zoom to the extent
+                $('#address').html(results[0].formatted_address);
+                app.center = center;  // OpenLayers expects [lon, lat]
+            } else {
+                $('#address').html("Location not found: "+address);
+            }
+      });
+    }
+
 
     loadMap();
 
+</script>
+<!-- Google Maps API for the search engine. The API key is from hcimasters@gmail.com -->
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmj7X_YVzW8I_EZQVlKdD6pT2nf3wPGyE&callback=initGMap">
 </script>
 
 </body>
