Manually merge Martial right-click-as-doubleclick implementation without the keyboard-related parts

--- a/renderer/content/tile.html
+++ b/renderer/content/tile.html
@@ -143,6 +143,19 @@
 				cancelable: true,
 			}));
 	}
+
+	// Send a double click event to the element defined by `targetPath`
+	function deliverDblclick(targetPath) {
+		console.log('>> dblclick', targetPath);
+		var target = getElement(targetPath);
+
+		if (target)
+			target.dispatchEvent(new MouseEvent('dblclick', {
+				bubbles: true,
+				cancelable: true,
+			}));
+	
+	}
 	</script>
 </head>
 <body>
